testsuite/tests/checks/others_in_exc_handler/test.out
other.adb:7:9: error: OTHERS choice in exception handler
7 |    when others =>                   --  FLAG
  |         ^^^^^^ 

